fetcher-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-scraper
  template:
    metadata:
      labels:
        app: web-scraper
    spec:
      containers:
      - name: web-scraper
        image: gunenes/fetcher:latest # Replace with your image
        ports:
        - containerPort: 3000
        command: ["python", "web-scrape.py"] # Replace with your actual script
